# virtual-plc-boiler-r

./: .gitignore  LICENSE  README.md  list.todo
EcoGridVPPSimulator/EcoGridVPP/: go.mod
apps/: docker-compose.yml
apps/data-consumer/: Dockerfile  pyproject.toml
apps/data-consumer-service/: Dockerfile
apps/digital-twin-platform/: coverage  coverage.out  go.mod
apps/gateway-service/: .энв(.env).txt  Dockerfile  go.mod  go.sum
apps/physics-service/: Dockerfile  pyproject.toml
apps/physics-service/app/: settings.py
apps/physics-service/app/core/: simulator.py  state.py  steam_table.py
apps/physics-service/app/runners/: console.py
apps/physics-service/app/scenarios/: demo.py
apps/physics-service/app/server/: grpc_server.py
apps/physics-service/app/server/protos/: boiler_pb2.py  boiler_pb2.pyi  boiler_pb2_grpc.py
apps/physics-service/cmd/: main.py  tempCodeRunnerFile.py
apps/physics-service/proto/: boiler.proto  boiler_pb2_grpc.py
apps/physics-service/scripts/debug/: simple_client.py
apps/physics-service/scripts/linux/: com.md  gen_proto.sh  run_docker_build.sh  run_sevice.sh  run_test.sh
apps/physics-service/scripts/windows/: run.ps1
apps/physics-service/scripts/windows/src/: run_project.ps1  run_tests.ps1
apps/physics-service/src/physics_service/: __init__.py
apps/physics-service/tests/: conftest.py  test_demo_scenario.py  test_simulator.py  test_state_and_types.py  test_steam_table.py
apps/plc-service/: Dockerfile  go.mod  go.sum
archive/: digital-twin-platform.rar
project/vpp-edge-sdk/: go.mod
(+47 files in other folders)
